--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
       <h2>Портфолио фотографий</h2>
 
       <div class="photo">
-        <img src="/1.jpg">
-        <img src="/2.jpg">
-        <img src="/3.jpg">
-        <img src="/4.jpg">
-        <img src="/5.jpg">
-        <img src="/6.jpg">
+        <img src="1.jpg">
+        <img src="2.jpg">
+        <img src="3.jpg">
+        <img src="4.jpg">
+        <img src="5.jpg">
+        <img src="6.jpg">
       </div>
 
       <a href="photo.html">Посмотреть другие фотографии</a>
